# storage/api-docs/api-docs.json
@@ -58,12 +58,22 @@
                 "operationId": "show cart items",
                 "parameters": [
                     {
-                        "name": "key",
+                        "name": "id",
                         "in": "path",
-                        "description": "a88483e72092f83baee46349fef80e9661cc3e5d4cba2",
+                        "description": "3",
                         "required": true
                     }
                 ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CartKeyRequest"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "204": {
                         "description": "show cart items",
@@ -94,12 +104,22 @@
                 "operationId": "Delete cart",
                 "parameters": [
                     {
-                        "name": "key",
+                        "name": "id",
                         "in": "path",
-                        "description": "a88483e72092f83baee46349fef80e9661cc3e5d4cba2",
+                        "description": "3",
                         "required": true
                     }
                 ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CartKeyRequest"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "204": {
                         "description": "Get cart id by key"
@@ -123,14 +143,16 @@
                 ],
                 "summary": "Get cart id by key",
                 "operationId": "Get cart id by key",
-                "parameters": [
-                    {
-                        "name": "key",
-                        "in": "path",
-                        "description": "a88483e72092f83baee46349fef80e9661cc3e5d4cba2",
-                        "required": true
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CartKeyRequest"
+                            }
+                        }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
                         "description": "Get cart id by key",
@@ -686,6 +708,19 @@
                 },
                 "type": "string"
             },
+            "CartKeyRequest": {
+                "title": "Create new Cart",
+                "description": "Request for create a new cart",
+                "properties": {
+                    "key": {
+                        "title": "key",
+                        "description": "key  for storring",
+                        "type": "string",
+                        "example": "e2e26459499dac9e6361419963e2e42861cc42adb8d6d"
+                    }
+                },
+                "type": "object"
+            },
             "CartRequest": {
                 "title": "Create new Cart",
                 "description": "Request for create a new cart",
@@ -694,7 +729,7 @@
                         "title": "key",
                         "description": "key  for storring",
                         "type": "string",
-                        "example": "random"
+                        "example": "e2e26459499dac9e6361419963e2e42861cc42adb8d6d"
                     },
                     "product_id": {
                         "title": "Product Id",
